--- a/WPFOpgave2/WPFOpgave2.csproj
+++ b/WPFOpgave2/WPFOpgave2.csproj
@@ -55,8 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="WPFOPgave3.xaml.cs">
-      <DependentUpon>WPFOPgave3.xaml</DependentUpon>
+    <Compile Include="WPFOpgave3.xaml.cs">
+      <DependentUpon>WPFOpgave3.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -70,7 +70,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="WPFOPgave3.xaml">
+    <Page Include="WPFOpgave3.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
