--- a/TuinCommunity/TuinCommunity.csproj
+++ b/TuinCommunity/TuinCommunity.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Planten.cs" />
     <Compile Include="TuinCentrumManager.cs" />
     <Compile Include="TuinDBManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
