Versie met opgave 8

--- a/TuinCommunity/TuinCommunity.csproj
+++ b/TuinCommunity/TuinCommunity.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TuinCommunity</RootNamespace>
     <AssemblyName>TuinCommunity</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Plant.cs" />
     <Compile Include="Planten.cs" />
+    <Compile Include="Soorten.cs" />
     <Compile Include="TuinCentrumManager.cs" />
     <Compile Include="TuinDBManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
