--- a/WPFOpgave2/App.config
+++ b/WPFOpgave2/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
     <add name="Tuincentrum" connectionString="server=.\sqlExpress;database=Tuincentrum;integrated security=true;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
